test/files/pos/bug2409/J.java
class J {
	static class J2 { }
	J(J2 j2) { }
}
