test/files/neg/t1211c/J.java

class J implements I {
	void f(E e) { }
}
